--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "prism-react-renderer": "^2.0.4",
         "react-chartjs-2": "^5.2.0",
         "react-router-dom": "^6.16.0",
+        "react-textarea-autosize": "^8.5.3",
         "swr": "^2.2.4",
         "typeorm": "^0.3.16",
         "ulid": "^2.3.0"
